// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DashboardLayout> > when a title is given > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_root_03d657"
      >
        <section
          class="_container_03d657"
        >
          <div
            class="_titleContainer_03d657"
          >
            <h2
              class="_title_03d657"
            >
              Page Title
            </h2>
          </div>
          <hr
            class="_hr_03d657"
          />
          Hello World
        </section>
        <header
          class="_root_c29812"
        >
          <div
            class="_bar_c29812"
          >
            <span
              class="_headerContainer_c29812"
            >
              <h1
                class="_header_c29812"
              >
                <a
                  class="_headerLinkLarge_c29812"
                  href="/dashboard"
                >
                  Skyrim Inventory
                  <br
                    class="_bp_c29812"
                  />
                   Management
                </a>
                <a
                  class="_headerLinkSmall_c29812"
                  href="/dashboard"
                >
                  S. I. M.
                </a>
              </h1>
            </span>
            <span
              class="_root_d263fb"
            >
              <div
                class="_main_d263fb"
              >
                <div
                  class="_button_d263fb"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars _hamburger_d263fb"
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="_info_d263fb"
                  >
                    <p
                      class="_name_d263fb"
                    >
                      Edna St. Vincent Millay
                    </p>
                    <p
                      class="_email_d263fb"
                    >
                      edna@gmail.com
                    </p>
                  </span>
                  <img
                    alt="User profile image"
                    class="_img_d263fb"
                    referrerpolicy="no-referrer"
                    src="/src/support/testProfileImg.png"
                  />
                </div>
              </div>
              <menu
                class="_dropdown_d263fb"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-right-from-bracket "
                    data-icon="right-from-bracket"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <p
                    class="_signOutText_d263fb"
                  >
                    Sign Out
                  </p>
                </div>
              </menu>
            </span>
          </div>
        </header>
        <div
          class="_root_91d025 _hidden_91d025"
          style="--text-color: #4e6d83;"
        />
        <div
          class="_root_753dd0 _hidden_753dd0"
          data-testid="modal"
        >
          <div
            class="_content_753dd0"
          />
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_root_03d657"
    >
      <section
        class="_container_03d657"
      >
        <div
          class="_titleContainer_03d657"
        >
          <h2
            class="_title_03d657"
          >
            Page Title
          </h2>
        </div>
        <hr
          class="_hr_03d657"
        />
        Hello World
      </section>
      <header
        class="_root_c29812"
      >
        <div
          class="_bar_c29812"
        >
          <span
            class="_headerContainer_c29812"
          >
            <h1
              class="_header_c29812"
            >
              <a
                class="_headerLinkLarge_c29812"
                href="/dashboard"
              >
                Skyrim Inventory
                <br
                  class="_bp_c29812"
                />
                 Management
              </a>
              <a
                class="_headerLinkSmall_c29812"
                href="/dashboard"
              >
                S. I. M.
              </a>
            </h1>
          </span>
          <span
            class="_root_d263fb"
          >
            <div
              class="_main_d263fb"
            >
              <div
                class="_button_d263fb"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars _hamburger_d263fb"
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_info_d263fb"
                >
                  <p
                    class="_name_d263fb"
                  >
                    Edna St. Vincent Millay
                  </p>
                  <p
                    class="_email_d263fb"
                  >
                    edna@gmail.com
                  </p>
                </span>
                <img
                  alt="User profile image"
                  class="_img_d263fb"
                  referrerpolicy="no-referrer"
                  src="/src/support/testProfileImg.png"
                />
              </div>
            </div>
            <menu
              class="_dropdown_d263fb"
            >
              <div>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-right-from-bracket "
                  data-icon="right-from-bracket"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  class="_signOutText_d263fb"
                >
                  Sign Out
                </p>
              </div>
            </menu>
          </span>
        </div>
      </header>
      <div
        class="_root_91d025 _hidden_91d025"
        style="--text-color: #4e6d83;"
      />
      <div
        class="_root_753dd0 _hidden_753dd0"
        data-testid="modal"
      >
        <div
          class="_content_753dd0"
        />
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DashboardLayout> > when includeGameSelector is set to true > when a game is selected in the query string > when the selected game corresponds to a game in the games array > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_root_03d657"
      >
        <section
          class="_container_03d657"
        >
          <div
            class="_titleContainer_03d657"
          >
            <div
              class="_root_0a8ecf _select_03d657"
              data-testid="styledSelect"
              style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
            >
              <div
                aria-controls="selectListbox"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="selectListbox"
                class="_header_0a8ecf"
                role="combobox"
              >
                <p
                  class="_headerText_0a8ecf"
                  data-testid="selectedOption"
                >
                  My Game 2
                </p>
                <button
                  class="_trigger_0a8ecf"
                  data-testid="selectTrigger"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                    data-icon="angle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <ul
                class="_dropdown_0a8ecf _hidden_0a8ecf"
                id="selectListbox"
                role="listbox"
              >
                <li
                  aria-selected="false"
                  class="_root_b75fe4"
                  data-option-value="32"
                  role="option"
                  tabindex="0"
                >
                  My Game 1
                </li>
                <li
                  aria-selected="false"
                  class="_root_b75fe4"
                  data-option-value="51"
                  role="option"
                  tabindex="0"
                >
                  My Game 2
                </li>
                <li
                  aria-selected="false"
                  class="_root_b75fe4"
                  data-option-value="77"
                  role="option"
                  tabindex="0"
                >
                  Game with a really real...
                </li>
              </ul>
            </div>
          </div>
          <hr
            class="_hr_03d657 _hiddenDivider_03d657"
          />
          Hello World
        </section>
        <header
          class="_root_c29812"
        >
          <div
            class="_bar_c29812"
          >
            <span
              class="_headerContainer_c29812"
            >
              <h1
                class="_header_c29812"
              >
                <a
                  class="_headerLinkLarge_c29812"
                  href="/dashboard"
                >
                  Skyrim Inventory
                  <br
                    class="_bp_c29812"
                  />
                   Management
                </a>
                <a
                  class="_headerLinkSmall_c29812"
                  href="/dashboard"
                >
                  S. I. M.
                </a>
              </h1>
            </span>
            <span
              class="_root_d263fb"
            >
              <div
                class="_main_d263fb"
              >
                <div
                  class="_button_d263fb"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars _hamburger_d263fb"
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="_info_d263fb"
                  >
                    <p
                      class="_name_d263fb"
                    >
                      Edna St. Vincent Millay
                    </p>
                    <p
                      class="_email_d263fb"
                    >
                      edna@gmail.com
                    </p>
                  </span>
                  <img
                    alt="User profile image"
                    class="_img_d263fb"
                    referrerpolicy="no-referrer"
                    src="/src/support/testProfileImg.png"
                  />
                </div>
              </div>
              <menu
                class="_dropdown_d263fb"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-right-from-bracket "
                    data-icon="right-from-bracket"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <p
                    class="_signOutText_d263fb"
                  >
                    Sign Out
                  </p>
                </div>
              </menu>
            </span>
          </div>
        </header>
        <div
          class="_root_91d025 _hidden_91d025"
          style="--text-color: #4e6d83;"
        />
        <div
          class="_root_753dd0 _hidden_753dd0"
          data-testid="modal"
        >
          <div
            class="_content_753dd0"
          />
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_root_03d657"
    >
      <section
        class="_container_03d657"
      >
        <div
          class="_titleContainer_03d657"
        >
          <div
            class="_root_0a8ecf _select_03d657"
            data-testid="styledSelect"
            style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
          >
            <div
              aria-controls="selectListbox"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="selectListbox"
              class="_header_0a8ecf"
              role="combobox"
            >
              <p
                class="_headerText_0a8ecf"
                data-testid="selectedOption"
              >
                My Game 2
              </p>
              <button
                class="_trigger_0a8ecf"
                data-testid="selectTrigger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                  data-icon="angle-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <ul
              class="_dropdown_0a8ecf _hidden_0a8ecf"
              id="selectListbox"
              role="listbox"
            >
              <li
                aria-selected="false"
                class="_root_b75fe4"
                data-option-value="32"
                role="option"
                tabindex="0"
              >
                My Game 1
              </li>
              <li
                aria-selected="false"
                class="_root_b75fe4"
                data-option-value="51"
                role="option"
                tabindex="0"
              >
                My Game 2
              </li>
              <li
                aria-selected="false"
                class="_root_b75fe4"
                data-option-value="77"
                role="option"
                tabindex="0"
              >
                Game with a really real...
              </li>
            </ul>
          </div>
        </div>
        <hr
          class="_hr_03d657 _hiddenDivider_03d657"
        />
        Hello World
      </section>
      <header
        class="_root_c29812"
      >
        <div
          class="_bar_c29812"
        >
          <span
            class="_headerContainer_c29812"
          >
            <h1
              class="_header_c29812"
            >
              <a
                class="_headerLinkLarge_c29812"
                href="/dashboard"
              >
                Skyrim Inventory
                <br
                  class="_bp_c29812"
                />
                 Management
              </a>
              <a
                class="_headerLinkSmall_c29812"
                href="/dashboard"
              >
                S. I. M.
              </a>
            </h1>
          </span>
          <span
            class="_root_d263fb"
          >
            <div
              class="_main_d263fb"
            >
              <div
                class="_button_d263fb"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars _hamburger_d263fb"
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_info_d263fb"
                >
                  <p
                    class="_name_d263fb"
                  >
                    Edna St. Vincent Millay
                  </p>
                  <p
                    class="_email_d263fb"
                  >
                    edna@gmail.com
                  </p>
                </span>
                <img
                  alt="User profile image"
                  class="_img_d263fb"
                  referrerpolicy="no-referrer"
                  src="/src/support/testProfileImg.png"
                />
              </div>
            </div>
            <menu
              class="_dropdown_d263fb"
            >
              <div>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-right-from-bracket "
                  data-icon="right-from-bracket"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  class="_signOutText_d263fb"
                >
                  Sign Out
                </p>
              </div>
            </menu>
          </span>
        </div>
      </header>
      <div
        class="_root_91d025 _hidden_91d025"
        style="--text-color: #4e6d83;"
      />
      <div
        class="_root_753dd0 _hidden_753dd0"
        data-testid="modal"
      >
        <div
          class="_content_753dd0"
        />
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DashboardLayout> > when includeGameSelector is set to true > when a game is selected in the query string > when the selected game does not correspond to a game in the games array > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_root_03d657"
      >
        <section
          class="_container_03d657"
        >
          <div
            class="_titleContainer_03d657"
          >
            <div
              class="_root_0a8ecf _select_03d657"
              data-testid="styledSelect"
              style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
            >
              <div
                aria-controls="selectListbox"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="selectListbox"
                class="_header_0a8ecf"
                role="combobox"
              >
                <p
                  class="_headerText_0a8ecf"
                  data-testid="selectedOption"
                />
                <button
                  class="_trigger_0a8ecf"
                  data-testid="selectTrigger"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                    data-icon="angle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <ul
                class="_dropdown_0a8ecf _hidden_0a8ecf"
                id="selectListbox"
                role="listbox"
              >
                <li
                  aria-selected="false"
                  class="_root_b75fe4"
                  data-option-value="32"
                  role="option"
                  tabindex="0"
                >
                  My Game 1
                </li>
                <li
                  aria-selected="false"
                  class="_root_b75fe4"
                  data-option-value="51"
                  role="option"
                  tabindex="0"
                >
                  My Game 2
                </li>
                <li
                  aria-selected="false"
                  class="_root_b75fe4"
                  data-option-value="77"
                  role="option"
                  tabindex="0"
                >
                  Game with a really real...
                </li>
              </ul>
            </div>
          </div>
          <hr
            class="_hr_03d657 _hiddenDivider_03d657"
          />
          Hello World
        </section>
        <header
          class="_root_c29812"
        >
          <div
            class="_bar_c29812"
          >
            <span
              class="_headerContainer_c29812"
            >
              <h1
                class="_header_c29812"
              >
                <a
                  class="_headerLinkLarge_c29812"
                  href="/dashboard"
                >
                  Skyrim Inventory
                  <br
                    class="_bp_c29812"
                  />
                   Management
                </a>
                <a
                  class="_headerLinkSmall_c29812"
                  href="/dashboard"
                >
                  S. I. M.
                </a>
              </h1>
            </span>
            <span
              class="_root_d263fb"
            >
              <div
                class="_main_d263fb"
              >
                <div
                  class="_button_d263fb"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars _hamburger_d263fb"
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="_info_d263fb"
                  >
                    <p
                      class="_name_d263fb"
                    >
                      Edna St. Vincent Millay
                    </p>
                    <p
                      class="_email_d263fb"
                    >
                      edna@gmail.com
                    </p>
                  </span>
                  <img
                    alt="User profile image"
                    class="_img_d263fb"
                    referrerpolicy="no-referrer"
                    src="/src/support/testProfileImg.png"
                  />
                </div>
              </div>
              <menu
                class="_dropdown_d263fb"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-right-from-bracket "
                    data-icon="right-from-bracket"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <p
                    class="_signOutText_d263fb"
                  >
                    Sign Out
                  </p>
                </div>
              </menu>
            </span>
          </div>
        </header>
        <div
          class="_root_91d025 _hidden_91d025"
          style="--text-color: #4e6d83;"
        />
        <div
          class="_root_753dd0 _hidden_753dd0"
          data-testid="modal"
        >
          <div
            class="_content_753dd0"
          />
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_root_03d657"
    >
      <section
        class="_container_03d657"
      >
        <div
          class="_titleContainer_03d657"
        >
          <div
            class="_root_0a8ecf _select_03d657"
            data-testid="styledSelect"
            style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
          >
            <div
              aria-controls="selectListbox"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="selectListbox"
              class="_header_0a8ecf"
              role="combobox"
            >
              <p
                class="_headerText_0a8ecf"
                data-testid="selectedOption"
              />
              <button
                class="_trigger_0a8ecf"
                data-testid="selectTrigger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                  data-icon="angle-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <ul
              class="_dropdown_0a8ecf _hidden_0a8ecf"
              id="selectListbox"
              role="listbox"
            >
              <li
                aria-selected="false"
                class="_root_b75fe4"
                data-option-value="32"
                role="option"
                tabindex="0"
              >
                My Game 1
              </li>
              <li
                aria-selected="false"
                class="_root_b75fe4"
                data-option-value="51"
                role="option"
                tabindex="0"
              >
                My Game 2
              </li>
              <li
                aria-selected="false"
                class="_root_b75fe4"
                data-option-value="77"
                role="option"
                tabindex="0"
              >
                Game with a really real...
              </li>
            </ul>
          </div>
        </div>
        <hr
          class="_hr_03d657 _hiddenDivider_03d657"
        />
        Hello World
      </section>
      <header
        class="_root_c29812"
      >
        <div
          class="_bar_c29812"
        >
          <span
            class="_headerContainer_c29812"
          >
            <h1
              class="_header_c29812"
            >
              <a
                class="_headerLinkLarge_c29812"
                href="/dashboard"
              >
                Skyrim Inventory
                <br
                  class="_bp_c29812"
                />
                 Management
              </a>
              <a
                class="_headerLinkSmall_c29812"
                href="/dashboard"
              >
                S. I. M.
              </a>
            </h1>
          </span>
          <span
            class="_root_d263fb"
          >
            <div
              class="_main_d263fb"
            >
              <div
                class="_button_d263fb"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars _hamburger_d263fb"
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_info_d263fb"
                >
                  <p
                    class="_name_d263fb"
                  >
                    Edna St. Vincent Millay
                  </p>
                  <p
                    class="_email_d263fb"
                  >
                    edna@gmail.com
                  </p>
                </span>
                <img
                  alt="User profile image"
                  class="_img_d263fb"
                  referrerpolicy="no-referrer"
                  src="/src/support/testProfileImg.png"
                />
              </div>
            </div>
            <menu
              class="_dropdown_d263fb"
            >
              <div>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-right-from-bracket "
                  data-icon="right-from-bracket"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  class="_signOutText_d263fb"
                >
                  Sign Out
                </p>
              </div>
            </menu>
          </span>
        </div>
      </header>
      <div
        class="_root_91d025 _hidden_91d025"
        style="--text-color: #4e6d83;"
      />
      <div
        class="_root_753dd0 _hidden_753dd0"
        data-testid="modal"
      >
        <div
          class="_content_753dd0"
        />
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DashboardLayout> > when includeGameSelector is set to true > when games are returned from the API > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_root_03d657"
      >
        <section
          class="_container_03d657"
        >
          <div
            class="_titleContainer_03d657"
          >
            <h2
              class="_title_03d657"
            >
              Your Games
            </h2>
            <div
              class="_root_0a8ecf _select_03d657"
              data-testid="styledSelect"
              style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
            >
              <div
                aria-controls="selectListbox"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="selectListbox"
                class="_header_0a8ecf"
                role="combobox"
              >
                <p
                  class="_headerText_0a8ecf"
                  data-testid="selectedOption"
                >
                  Games loading...
                </p>
                <button
                  class="_trigger_0a8ecf"
                  data-testid="selectTrigger"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                    data-icon="angle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <ul
                class="_dropdown_0a8ecf _hidden_0a8ecf"
                id="selectListbox"
                role="listbox"
              />
            </div>
          </div>
          <hr
            class="_hr_03d657"
          />
          Hello World
        </section>
        <header
          class="_root_c29812"
        >
          <div
            class="_bar_c29812"
          >
            <span
              class="_headerContainer_c29812"
            >
              <h1
                class="_header_c29812"
              >
                <a
                  class="_headerLinkLarge_c29812"
                  href="/dashboard"
                >
                  Skyrim Inventory
                  <br
                    class="_bp_c29812"
                  />
                   Management
                </a>
                <a
                  class="_headerLinkSmall_c29812"
                  href="/dashboard"
                >
                  S. I. M.
                </a>
              </h1>
            </span>
            <span
              class="_root_d263fb"
            >
              <div
                class="_main_d263fb"
              >
                <div
                  class="_button_d263fb"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars _hamburger_d263fb"
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="_info_d263fb"
                  >
                    <p
                      class="_name_d263fb"
                    >
                      Edna St. Vincent Millay
                    </p>
                    <p
                      class="_email_d263fb"
                    >
                      edna@gmail.com
                    </p>
                  </span>
                  <img
                    alt="User profile image"
                    class="_img_d263fb"
                    referrerpolicy="no-referrer"
                    src="/src/support/testProfileImg.png"
                  />
                </div>
              </div>
              <menu
                class="_dropdown_d263fb"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-right-from-bracket "
                    data-icon="right-from-bracket"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <p
                    class="_signOutText_d263fb"
                  >
                    Sign Out
                  </p>
                </div>
              </menu>
            </span>
          </div>
        </header>
        <div
          class="_root_91d025 _hidden_91d025"
          style="--text-color: #4e6d83;"
        />
        <div
          class="_root_753dd0 _hidden_753dd0"
          data-testid="modal"
        >
          <div
            class="_content_753dd0"
          />
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_root_03d657"
    >
      <section
        class="_container_03d657"
      >
        <div
          class="_titleContainer_03d657"
        >
          <h2
            class="_title_03d657"
          >
            Your Games
          </h2>
          <div
            class="_root_0a8ecf _select_03d657"
            data-testid="styledSelect"
            style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
          >
            <div
              aria-controls="selectListbox"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="selectListbox"
              class="_header_0a8ecf"
              role="combobox"
            >
              <p
                class="_headerText_0a8ecf"
                data-testid="selectedOption"
              >
                Games loading...
              </p>
              <button
                class="_trigger_0a8ecf"
                data-testid="selectTrigger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                  data-icon="angle-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <ul
              class="_dropdown_0a8ecf _hidden_0a8ecf"
              id="selectListbox"
              role="listbox"
            />
          </div>
        </div>
        <hr
          class="_hr_03d657"
        />
        Hello World
      </section>
      <header
        class="_root_c29812"
      >
        <div
          class="_bar_c29812"
        >
          <span
            class="_headerContainer_c29812"
          >
            <h1
              class="_header_c29812"
            >
              <a
                class="_headerLinkLarge_c29812"
                href="/dashboard"
              >
                Skyrim Inventory
                <br
                  class="_bp_c29812"
                />
                 Management
              </a>
              <a
                class="_headerLinkSmall_c29812"
                href="/dashboard"
              >
                S. I. M.
              </a>
            </h1>
          </span>
          <span
            class="_root_d263fb"
          >
            <div
              class="_main_d263fb"
            >
              <div
                class="_button_d263fb"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars _hamburger_d263fb"
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_info_d263fb"
                >
                  <p
                    class="_name_d263fb"
                  >
                    Edna St. Vincent Millay
                  </p>
                  <p
                    class="_email_d263fb"
                  >
                    edna@gmail.com
                  </p>
                </span>
                <img
                  alt="User profile image"
                  class="_img_d263fb"
                  referrerpolicy="no-referrer"
                  src="/src/support/testProfileImg.png"
                />
              </div>
            </div>
            <menu
              class="_dropdown_d263fb"
            >
              <div>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-right-from-bracket "
                  data-icon="right-from-bracket"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  class="_signOutText_d263fb"
                >
                  Sign Out
                </p>
              </div>
            </menu>
          </span>
        </div>
      </header>
      <div
        class="_root_91d025 _hidden_91d025"
        style="--text-color: #4e6d83;"
      />
      <div
        class="_root_753dd0 _hidden_753dd0"
        data-testid="modal"
      >
        <div
          class="_content_753dd0"
        />
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DashboardLayout> > when includeGameSelector is set to true > when there are no games available > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_root_03d657"
      >
        <section
          class="_container_03d657"
        >
          <div
            class="_titleContainer_03d657"
          >
            <div
              class="_root_0a8ecf _select_03d657"
              data-testid="styledSelect"
              style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
            >
              <div
                aria-controls="selectListbox"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="selectListbox"
                class="_header_0a8ecf"
                role="combobox"
              >
                <p
                  class="_headerText_0a8ecf"
                  data-testid="selectedOption"
                >
                  Games loading...
                </p>
                <button
                  class="_trigger_0a8ecf"
                  data-testid="selectTrigger"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                    data-icon="angle-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <ul
                class="_dropdown_0a8ecf _hidden_0a8ecf"
                id="selectListbox"
                role="listbox"
              />
            </div>
          </div>
          <hr
            class="_hr_03d657 _hiddenDivider_03d657"
          />
          Hello World
        </section>
        <header
          class="_root_c29812"
        >
          <div
            class="_bar_c29812"
          >
            <span
              class="_headerContainer_c29812"
            >
              <h1
                class="_header_c29812"
              >
                <a
                  class="_headerLinkLarge_c29812"
                  href="/dashboard"
                >
                  Skyrim Inventory
                  <br
                    class="_bp_c29812"
                  />
                   Management
                </a>
                <a
                  class="_headerLinkSmall_c29812"
                  href="/dashboard"
                >
                  S. I. M.
                </a>
              </h1>
            </span>
            <span
              class="_root_d263fb"
            >
              <div
                class="_main_d263fb"
              >
                <div
                  class="_button_d263fb"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars _hamburger_d263fb"
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="_info_d263fb"
                  >
                    <p
                      class="_name_d263fb"
                    >
                      Edna St. Vincent Millay
                    </p>
                    <p
                      class="_email_d263fb"
                    >
                      edna@gmail.com
                    </p>
                  </span>
                  <img
                    alt="User profile image"
                    class="_img_d263fb"
                    referrerpolicy="no-referrer"
                    src="/src/support/testProfileImg.png"
                  />
                </div>
              </div>
              <menu
                class="_dropdown_d263fb"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-right-from-bracket "
                    data-icon="right-from-bracket"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <p
                    class="_signOutText_d263fb"
                  >
                    Sign Out
                  </p>
                </div>
              </menu>
            </span>
          </div>
        </header>
        <div
          class="_root_91d025 _hidden_91d025"
          style="--text-color: #4e6d83;"
        />
        <div
          class="_root_753dd0 _hidden_753dd0"
          data-testid="modal"
        >
          <div
            class="_content_753dd0"
          />
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_root_03d657"
    >
      <section
        class="_container_03d657"
      >
        <div
          class="_titleContainer_03d657"
        >
          <div
            class="_root_0a8ecf _select_03d657"
            data-testid="styledSelect"
            style="--button-background-color: #2274a5; --button-hover-color: #1e6894; --button-text-color: #fff; --button-border-color: #1b5c84;"
          >
            <div
              aria-controls="selectListbox"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="selectListbox"
              class="_header_0a8ecf"
              role="combobox"
            >
              <p
                class="_headerText_0a8ecf"
                data-testid="selectedOption"
              >
                Games loading...
              </p>
              <button
                class="_trigger_0a8ecf"
                data-testid="selectTrigger"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-angle-down _fa_0a8ecf"
                  data-icon="angle-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <ul
              class="_dropdown_0a8ecf _hidden_0a8ecf"
              id="selectListbox"
              role="listbox"
            />
          </div>
        </div>
        <hr
          class="_hr_03d657 _hiddenDivider_03d657"
        />
        Hello World
      </section>
      <header
        class="_root_c29812"
      >
        <div
          class="_bar_c29812"
        >
          <span
            class="_headerContainer_c29812"
          >
            <h1
              class="_header_c29812"
            >
              <a
                class="_headerLinkLarge_c29812"
                href="/dashboard"
              >
                Skyrim Inventory
                <br
                  class="_bp_c29812"
                />
                 Management
              </a>
              <a
                class="_headerLinkSmall_c29812"
                href="/dashboard"
              >
                S. I. M.
              </a>
            </h1>
          </span>
          <span
            class="_root_d263fb"
          >
            <div
              class="_main_d263fb"
            >
              <div
                class="_button_d263fb"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars _hamburger_d263fb"
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_info_d263fb"
                >
                  <p
                    class="_name_d263fb"
                  >
                    Edna St. Vincent Millay
                  </p>
                  <p
                    class="_email_d263fb"
                  >
                    edna@gmail.com
                  </p>
                </span>
                <img
                  alt="User profile image"
                  class="_img_d263fb"
                  referrerpolicy="no-referrer"
                  src="/src/support/testProfileImg.png"
                />
              </div>
            </div>
            <menu
              class="_dropdown_d263fb"
            >
              <div>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-right-from-bracket "
                  data-icon="right-from-bracket"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  class="_signOutText_d263fb"
                >
                  Sign Out
                </p>
              </div>
            </menu>
          </span>
        </div>
      </header>
      <div
        class="_root_91d025 _hidden_91d025"
        style="--text-color: #4e6d83;"
      />
      <div
        class="_root_753dd0 _hidden_753dd0"
        data-testid="modal"
      >
        <div
          class="_content_753dd0"
        />
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DashboardLayout> > when no title is given > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_root_03d657"
      >
        <section
          class="_container_03d657"
        >
          Hello World
        </section>
        <header
          class="_root_c29812"
        >
          <div
            class="_bar_c29812"
          >
            <span
              class="_headerContainer_c29812"
            >
              <h1
                class="_header_c29812"
              >
                <a
                  class="_headerLinkLarge_c29812"
                  href="/dashboard"
                >
                  Skyrim Inventory
                  <br
                    class="_bp_c29812"
                  />
                   Management
                </a>
                <a
                  class="_headerLinkSmall_c29812"
                  href="/dashboard"
                >
                  S. I. M.
                </a>
              </h1>
            </span>
            <span
              class="_root_d263fb"
            >
              <div
                class="_main_d263fb"
              >
                <div
                  class="_button_d263fb"
                  role="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-bars _hamburger_d263fb"
                    data-icon="bars"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <span
                    class="_info_d263fb"
                  >
                    <p
                      class="_name_d263fb"
                    >
                      Edna St. Vincent Millay
                    </p>
                    <p
                      class="_email_d263fb"
                    >
                      edna@gmail.com
                    </p>
                  </span>
                  <img
                    alt="User profile image"
                    class="_img_d263fb"
                    referrerpolicy="no-referrer"
                    src="/src/support/testProfileImg.png"
                  />
                </div>
              </div>
              <menu
                class="_dropdown_d263fb"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-right-from-bracket "
                    data-icon="right-from-bracket"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                      fill="currentColor"
                    />
                  </svg>
                  <p
                    class="_signOutText_d263fb"
                  >
                    Sign Out
                  </p>
                </div>
              </menu>
            </span>
          </div>
        </header>
        <div
          class="_root_91d025 _hidden_91d025"
          style="--text-color: #4e6d83;"
        />
        <div
          class="_root_753dd0 _hidden_753dd0"
          data-testid="modal"
        >
          <div
            class="_content_753dd0"
          />
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_root_03d657"
    >
      <section
        class="_container_03d657"
      >
        Hello World
      </section>
      <header
        class="_root_c29812"
      >
        <div
          class="_bar_c29812"
        >
          <span
            class="_headerContainer_c29812"
          >
            <h1
              class="_header_c29812"
            >
              <a
                class="_headerLinkLarge_c29812"
                href="/dashboard"
              >
                Skyrim Inventory
                <br
                  class="_bp_c29812"
                />
                 Management
              </a>
              <a
                class="_headerLinkSmall_c29812"
                href="/dashboard"
              >
                S. I. M.
              </a>
            </h1>
          </span>
          <span
            class="_root_d263fb"
          >
            <div
              class="_main_d263fb"
            >
              <div
                class="_button_d263fb"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars _hamburger_d263fb"
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="_info_d263fb"
                >
                  <p
                    class="_name_d263fb"
                  >
                    Edna St. Vincent Millay
                  </p>
                  <p
                    class="_email_d263fb"
                  >
                    edna@gmail.com
                  </p>
                </span>
                <img
                  alt="User profile image"
                  class="_img_d263fb"
                  referrerpolicy="no-referrer"
                  src="/src/support/testProfileImg.png"
                />
              </div>
            </div>
            <menu
              class="_dropdown_d263fb"
            >
              <div>
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-right-from-bracket "
                  data-icon="right-from-bracket"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  class="_signOutText_d263fb"
                >
                  Sign Out
                </p>
              </div>
            </menu>
          </span>
        </div>
      </header>
      <div
        class="_root_91d025 _hidden_91d025"
        style="--text-color: #4e6d83;"
      />
      <div
        class="_root_753dd0 _hidden_753dd0"
        data-testid="modal"
      >
        <div
          class="_content_753dd0"
        />
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
